src/objects/Case_to_Contact_Field_Mapping__mdt.object
<CustomObject>
    <description>used to define a case field (API name) mapping to a Contact field (API name) of same type.</description>
    <fields>
        <fullName>Case_API_name__c</fullName>
        <description>the case field to be mapped - API name only</description>
        <label>Case Field API name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Field_API_name__c</fullName>
        <description>contact api field name to map to</description>
        <label>Contact Field API name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_in_webform_mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, then this mapping will be used to map values from a webform onto a matched contact</description>
        <label>Use in webform mapping</label>
        <type>Checkbox</type>
    </fields>
    <label>Case to Contact Field Mapping</label>
    <pluralLabel>Case to Contact Field Mappings</pluralLabel>
</CustomObject>